err/avocado-framework-plugin-varianter-yaml-to-mux.err
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './etc/avocado'...
Listing './etc/avocado/conf.d'...
Listing './etc/avocado/scripts'...
Listing './etc/avocado/scripts/job'...
Listing './etc/avocado/scripts/job/post.d'...
Listing './etc/avocado/scripts/job/pre.d'...
Listing './etc/avocado/sysinfo'...
Listing './gdb-prerun-scripts'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/avocado'...
Listing './lib/python3.5/site-packages/avocado/core'...
Listing './lib/python3.5/site-packages/avocado/core/restclient'...
Listing './lib/python3.5/site-packages/avocado/core/restclient/cli'...
Listing './lib/python3.5/site-packages/avocado/core/restclient/cli/actions'...
Listing './lib/python3.5/site-packages/avocado/core/restclient/cli/args'...
Listing './lib/python3.5/site-packages/avocado/plugins'...
Listing './lib/python3.5/site-packages/avocado/utils'...
Listing './lib/python3.5/site-packages/avocado/utils/external'...
Compiling './lib/python3.5/site-packages/avocado/utils/software_manager.py'...
***   File "./lib/python3.5/site-packages/avocado/utils/software_manager.py", line 304
    except process.CmdError, details:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/avocado_framework-57.0.egg-info'...
Listing './lib/python3.5/site-packages/avocado_framework_plugin_varianter_yaml_to_mux-57.0.egg-info'...
Listing './lib/python3.5/site-packages/avocado_varianter_yaml_to_mux'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/stevedore'...
Listing './lib/python3.5/site-packages/stevedore/example'...
Listing './lib/python3.5/site-packages/stevedore/example2'...
Listing './lib/python3.5/site-packages/stevedore/tests'...
Listing './lib/python3.5/site-packages/stevedore-1.28.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './libexec'...
Listing './plugins'...
Listing './plugins/job-pre-post'...
Listing './plugins/job-pre-post/mail'...
Compiling './plugins/job-pre-post/mail/avocado_job_mail.py'...
Compiling './plugins/job-pre-post/mail/setup.py'...
Listing './plugins/job-pre-post/sleep'...
Compiling './plugins/job-pre-post/sleep/avocado_job_sleep.py'...
Compiling './plugins/job-pre-post/sleep/setup.py'...
Listing './share'...
Listing './share/python-wheels'...
Listing './tests'...
Compiling './tests/abort.py'...
Compiling './tests/cabort.py'...
Listing './tests/cabort.py.data'...
Compiling './tests/cancelonsetup.py'...
Compiling './tests/canceltest.py'...
Compiling './tests/datadir.py'...
Listing './tests/datadir.py.data'...
Compiling './tests/doublefail.py'...
Compiling './tests/doublefree.py'...
Listing './tests/doublefree.py.data'...
Compiling './tests/doublefree_nasty.py'...
Listing './tests/doublefree_nasty.py.data'...
Listing './tests/env_variables.sh.data'...
Compiling './tests/errortest.py'...
Compiling './tests/errortest_nasty.py'...
Compiling './tests/errortest_nasty2.py'...
Compiling './tests/errortest_nasty3.py'...
Compiling './tests/fail_on_exception.py'...
Compiling './tests/failtest.py'...
Compiling './tests/failtest_ugly.py'...
Compiling './tests/gdbtest.py'...
Listing './tests/gdbtest.py.data'...
Compiling './tests/gendata.py'...
Compiling './tests/linuxbuild.py'...
Compiling './tests/modify_variable.py'...
Listing './tests/modify_variable.py.data'...
Compiling './tests/multiple_tests.py'...
Compiling './tests/multiplextest.py'...
Listing './tests/multiplextest.py.data'...
Listing './tests/output_check.sh.data'...
Compiling './tests/passtest.py'...
Compiling './tests/raise.py'...
Listing './tests/raise.py.data'...
Compiling './tests/sleeptenmin.py'...
Listing './tests/sleeptenmin.py.data'...
Compiling './tests/sleeptest.py'...
Listing './tests/sleeptest.py.data'...
Compiling './tests/synctest.py'...
Listing './tests/synctest.py.data'...
Compiling './tests/test_env.py'...
Compiling './tests/timeouttest.py'...
Compiling './tests/trinity.py'...
Listing './tests/trinity.py.data'...
Compiling './tests/uncaught_exception.py'...
Compiling './tests/vm-cleanup.py'...
Listing './tests/vm-cleanup.py.data'...
Compiling './tests/warntest.py'...
Compiling './tests/whiteboard.py'...
Listing './tests/whiteboard.py.data'...
Listing './varianter_pict'...
Listing './wrappers'...
Listing './yaml_to_mux'...
Listing './yaml_to_mux/hw'...
Listing './yaml_to_mux/os'...
Listing './yaml_to_mux_loader'...
